--- a/transifex.yml
+++ b/transifex.yml
@@ -4,5 +4,12 @@ git:
     file_format: GITHUBMARKDOWN
     source_file_extension: md
     source_language: zh_CN
-    source_file_dir: source
+    source_file_dir: source/
+    translation_files_expression: 'Translations/<lang>'
+
+  - filter_type: dir
+    file_format: GITHUBMARKDOWN
+    source_file_extension: rst
+    source_language: zh_CN
+    source_file_dir: source/
     translation_files_expression: 'Translations/<lang>'
